--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ DB_PORT = port
 DB_DATABASE = database
 DB_USERNAME = username
 DB_PASSWORD = password
+
+JWT_KEY = password
+JWT_ISSUER = route
+JWT_AUDIENCE = route
+JWT_EXPIREMINUTES = 60
