Feat: validation is added so that the email field is unique in the database and is not repeated.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,16 @@
 			],
 			"problemMatcher": "$msCompile",
 			"dependsOn": "clean"
+		},
+		{
+			"label": "build",
+			"command": "dotnet",
+			"type": "process",
+			"args": [
+			"build",
+			"${workspaceFolder}/SkillSwap.csproj"
+			],
+			"problemMatcher": "$msCompile"
 		}
 	]
 }
